[tool.poetry]
name = "the-best"
version = "0.1.0"
description = ""
authors = ["Grzegorz Kocjan <1679285+gkocjan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pydantic-settings = "^2.4.0"
ruff = "^0.6.3"
fastapi = "^0.115.12"
httpx = "^0.28.1"
respx = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
